--- a/app/views/registration/_save_registration_data.html.erb
+++ b/app/views/registration/_save_registration_data.html.erb
@@ -1,3 +1,6 @@
 <input type = "hidden" name="save_status" id= "save_status value="<%= @registration_saved %>" />
 <input type ="hidden" name="registration_id" id="registration_id" value="<%= @registration_id %>" />
+<input type ="hidden" name="deposit_amount" id="deposit_amount" value="<%= @deposit_amount %>" />
+<input type ="hidden" name="processing_charge" id="processing_charge" value="<%= @processing_charge %>" />
+<input type ="hidden" name="to_be_charged" id="to-be_charged" value="<%= @to_be_charged %>" />
 <div id="save_message"><%= @message %></div>
