--- a/app/views/layouts/admin_layout.html.erb
+++ b/app/views/layouts/admin_layout.html.erb
@@ -4,8 +4,9 @@
     <title id="title"><%= title %></title>
     <%= favicon_link_tag %>
     <%= csrf_meta_tag %>
+    <%= tag :meta, :name => "stripe-key", :content => STRIPE_PUBLIC_KEY %>
     <%= stylesheet_link_tag "application" %>
-    <%= javascript_include_tag "application" %>
+    <%= javascript_include_tag "https://js.stripe.com/v1/", "application" %>
   </head>
   <body class = logged_in>
   <div class="wrapper">
