--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,10 +4,11 @@
     <title id="title"><%= title %></title>
     <%= favicon_link_tag %>
     <%= csrf_meta_tag %>
+    <%= tag :meta, :name => "stripe-key", :content => STRIPE_PUBLIC_KEY %>
 
     <!--<%#= render 'layouts/stylesheets' %>-->
     <%= stylesheet_link_tag "application" %>
-    <%= javascript_include_tag "application" %>
+    <%= javascript_include_tag "https://js.stripe.com/v1/", "application" %>
   </head>
 	<body>
 		<div class="container">
