--- a/app/assets/stylesheets/registration.css
+++ b/app/assets/stylesheets/registration.css
@@ -27,7 +27,7 @@ input[type="submit"]:focus, input[type="button"]:focus {
     /*background: url('container.png') no-repeat;*/
     width: 754px;
     border: 5px;
-    height: 1000px;
+    /*height: 1000px;*/
     margin: 20px auto;
     padding: 50px 0;
     overflow: hidden;
@@ -270,7 +270,7 @@ input[type="submit"]:focus, input[type="button"]:focus {
 
     #progress_bar {
         background: url("progress_bar.png") no-repeat;
-        width: 350px;
+        width: 340px;
         height: 24px;
         /*padding-top: 10px;*/
         margin: 0 auto;
@@ -295,7 +295,7 @@ input[type="submit"]:focus, input[type="button"]:focus {
         font-weight: bold;
         color: black;
         /*padding-top: 10px;*/
-        width: 350;
+        width: 340px;
         height: 24px;
         top: -20px;
         left: 0;
