Final changes before publication.

--- a/app/views/registration/_payment_gateway.html.erb
+++ b/app/views/registration/_payment_gateway.html.erb
@@ -1,1 +1,1 @@
-<input type ="hidden" name="gateway_error" id="gateway_error" value="<%= @error_message %>" />
+<input type ="hidden" name="gateway_error" id="gateway_error" value="<%= @payment_error_message %>" />
