Added link to help file.

--- a/app/views/registration/new.html.erb
+++ b/app/views/registration/new.html.erb
@@ -1,7 +1,7 @@
 <%= stylesheet_link_tag "print", :media => "print" %>
 <div id='active_admin_content'>
     <div id='register_header'>
-        <h4><%= link_to "Help with scheduling a group", "#" %></h4>
+        <h4><%= link_to "Help with scheduling a group", "http://www.sierraserviceproject.org/2013/MySSP Registration User Guide.pdf" %></h4>
         <h3>This online system has been set up for your convenience. If you run into problems, refer to the user guide 
           accessible through the 'Help' link above. Also, don't hesitate to pick up the phone and call Meghan at 916-488-6441 
           during normal business hours. Alternatively, send her an email at <%= mail_to "meghan.osborn@sierraserviceproject.org",
