Changes to schedule report.

--- a/app/views/registration/show_schedule.html.erb
+++ b/app/views/registration/show_schedule.html.erb
@@ -34,8 +34,12 @@
                             <% for j in 0..count - 1 do %>
                                 <% if params[:reg_or_sched] == "registered" then %>
                                      <% if @schedule[:registration_matrix][i][j] > 0 then %>
-                                          <td><%= link_to (@schedule[:registration_matrix][i][j]).to_s,
-                                                reg_program_session_path(:id => @schedule[:session_id_matrix][i][j]) %></td>
+                                      <td>
+                                        <%= link_to (@schedule[:registration_matrix][i][j]).to_s,
+                                                    reg_program_session_path(:id  => @schedule[:session_id_matrix][i][j]),
+                                                    :title => "Click for details."  %>
+                                      </td>
+
                                           <% else %>
                                             <td><%= @schedule[:registration_matrix][i][j].to_s %></td>
                                     <% end %>
